<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.santi.Exchange.MainActivity">

    <TextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="end"
        android:inputType="number|numberDecimal"
        android:text="@string/_0_00"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblAmount"
        app:layout_constraintTop_toBottomOf="@+id/lblAmount" />

    <TextView
        android:id="@+id/lblFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from_currency"
        app:layout_constraintStart_toStartOf="@+id/txtAmount"
        app:layout_constraintTop_toBottomOf="@+id/txtAmount" />

    <RadioGroup
        android:id="@+id/rgFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lblFrom"
        app:layout_constraintTop_toBottomOf="@+id/lblFrom">

        <RadioButton
            android:id="@+id/rbFromDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dollar" />

        <RadioButton
            android:id="@+id/rbFromEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/rbFromPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pound" />

        <ImageView
            android:id="@+id/imgFrom"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:orientation="horizontal"
             />
    </RadioGroup>


    <TextView
        android:id="@+id/lblTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to_currency"
        app:layout_constraintStart_toStartOf="@+id/rgFrom"
        app:layout_constraintTop_toBottomOf="@+id/rgFrom" />

    <RadioGroup
        android:id="@+id/rgTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rgFrom"
        app:layout_constraintTop_toBottomOf="@+id/lblTo">

        <RadioButton
            android:id="@+id/rbToDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dollar" />

        <RadioButton
            android:id="@+id/rbToEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/rbToPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pound" />

        <ImageView
            android:id="@+id/imgTo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/exchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgTo" />

</android.support.constraint.ConstraintLayout>